--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -44,8 +44,8 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Create Event", class: "btn-submit" %>
+    <%= form.submit "Create Event", class: "btn btn_primary btn-flat" %>
   </div>
 <% end %>
 
-<%= link_to 'Back to Dashboard', dashboard_path, class: 'btn-back' %>
+<%= link_to 'Back to Dashboard', dashboard_path %>
