--- a/app/assets/stylesheets/components/_btn_ghost.scss
+++ b/app/assets/stylesheets/components/_btn_ghost.scss
@@ -12,7 +12,6 @@
   bottom: 0;
   margin: auto 0;
   text-align: center;
-
 }
 
 .btn-ghost:hover {
@@ -22,4 +21,9 @@
 
 .no-border {
   border: none;
+}
+
+.inline-display {
+  display: inline;
+  margin-left: 3px;
 }
