--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @family, html: { multipart: true }  do |f| %>
 <%= f.input :name, label: "Name", placeholder: "Enter the name of the family" %>
  <div class="form-actions">
-    <%= f.button :submit, "Create Family", class: "btn btn-primary" %>
+    <%= f.button :submit, "Create Family", class: "btn btn-primary btn-flat" %>
   </div>
 <% end %>
