--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@invitation, url: invitations_path) do |f| %>
   <div class="form-group">
-    <%= f.input :recipient_email, label: "Send an invitation to the following email address:" %>
+    <%= f.input :recipient_email, label: "Email address:" %>
   </div>
 
   <div class="form-group">
