--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,11 +4,10 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "calendar";
-// @import "modal";
+@import "modal";
 @import "btn_ghost";
 @import "btn_flat";
 @import "card";
 @import "event";
 @import "footer";
-
-
+@import "btn_circle";
