--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,4 +1,3 @@
-
 .modal {
   position: absolute;
   top: 0;
@@ -14,7 +13,7 @@
     background: #fff;
     padding: 20px;
     border-radius: 8px;
-    width: 400px;
+    width: 800px;
     max-width: 90%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 
@@ -25,16 +24,12 @@
 
     button {
       display: inline-block;
-      background: #9e5fff;
-      color: #fff;
+      color: #000000;
       border: none;
       padding: 10px 15px;
       border-radius: 4px;
       cursor: pointer;
 
-      &:hover {
-        background: #7c3fcc;
-      }
     }
 
     form {
@@ -63,15 +58,15 @@
       }
 
       input[type="submit"] {
-        background: #28a745;
+        background: #55ad9b;
         color: white;
         border: none;
         padding: 10px 20px;
         cursor: pointer;
-        border-radius: 4px;
+        border-radius: 40px;
 
         &:hover {
-          background: $green;
+          background: #10705d;
         }
       }
     }
