--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,8 +1,1 @@
-<h1>New Child</h1>
-
-  <%= simple_form_for [@family, @child] do |form| %>
-    <%= form.input :first_name, label: "First Name", input_html: { class: "form-control" } %>
-    <%= form.input :last_name, label: "Last Name", input_html: { class: "form-control" } %>
-    <%= form.input :birth_date, as: :string, label: "Birth Date", input_html:{ data: { controller: "datepicker" } } %>
-    <%= form.submit "Create Child", class: "btn btn-flat" %>
-  <% end %>
+<%= render "new", family: @family, child: @child %>
