--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  position: absolute;
+  // position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -29,7 +29,6 @@
       padding: 10px 15px;
       border-radius: 4px;
       cursor: pointer;
-
     }
 
     form {
@@ -71,5 +70,4 @@
       }
     }
   }
-
 }
