--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,24 @@
   </head>
 
   <body>
-      <%= render "shared/navbar" %>
 
-     <div class="container">
+
+    <%= render "shared/navbar" %>
+       <div class="container">
       <%= render "shared/flashes" %>
+         <% if flash[:notice] %>
+        <div class="alert alert-success">
+          <%= flash[:notice] %>
+        </div>
+      <% elsif flash[:alert] %>
+        <div class="alert alert-danger">
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
-
      <%= render "shared/footer" %>
+
+
   </body>
 </html>
