--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -30,11 +30,11 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1edd88;
+  background: #70a0af;
   transition: background 0.3s ease;
 }
 
 .event:hover {
-  background: #1bcb7f;
+  background: #6699a8;
   color: white;
 }
