--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -17,5 +17,5 @@ $orange: #e67e22;
 // $gray: #0e0000;
 // $light-gray: #f4f4f4;
 
-$green-calendar: #1edd88;
+$green-calendar: #70A0AF;
 $yellow-calendar: #b7da1d;
